--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -77,6 +77,19 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{xcolor}
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
 
 \floatplacement{figure}{H}
 \begin{document}
@@ -147,13 +160,13 @@ Different sampling times after 800 generations of gene flow.}
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figS2_updated_SP-1.pdf}
-\caption{\label{fig:figSGLM_data} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figSGLM_data_SP} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figS2_updated_EP-1.pdf}
-\caption{\label{fig:figSGLM_data} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figSGLM_data_EP} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 \section{Supplement Tables}
@@ -161,56 +174,83 @@ Different sampling times after 800 generations of gene flow.}
 
 \begin{table}[H]
 
-\caption{\label{tab:tableSGLM1}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
+\caption{\label{tab:table_S1_EP_tm_td_and_SP_model_3}\label{tab:table_S1_EP_tm_td_and_SP_model_3} Mean, Standard deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
 \centering
-\begin{tabular}[t]{l|r|r|r|r|r|r}
+\begin{tabular}[t]{l|l|r|r|r|r|r|r}
 \hline
-  & mean & sd & 5.5\% & 94.5\% & n\_eff & Rhat\\
+model & variable & mean & sd & 5.5\% & 94.5\% & n\_eff & Rhat\\
 \hline
-a & -0.01 & 0.03 & -0.07 & 0.05 & 2168.04 & 1\\
-\cline{1-7}
-bd & 0.02 & 0.02 & -0.02 & 0.07 & 4011.95 & 1\\
-\cline{1-7}
-bG & -0.13 & 0.02 & -0.18 & -0.09 & 3345.76 & 1\\
-\cline{1-7}
-bR & -0.75 & 0.02 & -0.79 & -0.70 & 4131.16 & 1\\
-\cline{1-7}
-bD & -0.22 & 0.02 & -0.27 & -0.18 & 3651.09 & 1\\
-\cline{1-7}
-bm & 0.13 & 0.02 & 0.09 & 0.18 & 3809.54 & 1\\
-\cline{1-7}
-bA & -0.12 & 0.02 & -0.17 & -0.07 & 3556.78 & 1\\
-\cline{1-7}
-sigma & 0.91 & 0.01 & 0.90 & 0.93 & 5418.41 & 1\\
-\hline
-\end{tabular}
-\end{table}
+ & a & 0.00 & 0.03 & -0.07 & 0.06 & 1973.74 & 1\\
 
-\begin{table}[H]
+ & bmr & 0.18 & 0.04 & 0.11 & 0.26 & 2614.04 & 1\\
 
-\caption{\label{tab:tableSGLM2}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
-\centering
-\begin{tabular}[t]{l|r|r|r|r|r|r}
-\hline
-  & mean & sd & 5.5\% & 94.5\% & n\_eff & Rhat\\
-\hline
-a & 0.00 & 0.03 & -0.06 & 0.06 & 1823.65 & 1\\
-\cline{1-7}
-bdA & 0.05 & 0.04 & -0.04 & 0.14 & 2049.11 & 1\\
-\cline{1-7}
-bd & 0.00 & 0.03 & -0.06 & 0.06 & 2156.79 & 1\\
-\cline{1-7}
-bG & -0.13 & 0.02 & -0.18 & -0.09 & 2865.05 & 1\\
-\cline{1-7}
-bR & -0.75 & 0.02 & -0.79 & -0.71 & 3405.94 & 1\\
-\cline{1-7}
-bD & -0.22 & 0.02 & -0.27 & -0.18 & 3128.70 & 1\\
-\cline{1-7}
-bm & 0.13 & 0.02 & 0.09 & 0.18 & 3850.41 & 1\\
-\cline{1-7}
-bA & -0.15 & 0.03 & -0.21 & -0.08 & 2335.16 & 1\\
-\cline{1-7}
-sigma & 0.91 & 0.01 & 0.90 & 0.93 & 3894.49 & 1\\
+ & bdr & -0.05 & 0.04 & -0.13 & 0.02 & 2297.09 & 1\\
+
+ & bmA & -0.14 & 0.04 & -0.21 & -0.06 & 2729.26 & 1\\
+
+ & bdA & 0.01 & 0.04 & -0.06 & 0.09 & 2410.76 & 1\\
+
+ & bd & 0.00 & 0.03 & -0.05 & 0.05 & 2536.66 & 1\\
+
+ & bG & -0.17 & 0.02 & -0.21 & -0.13 & 4109.31 & 1\\
+
+ & bR & -1.22 & 0.03 & -1.29 & -1.16 & 2210.48 & 1\\
+
+ & bD & -0.27 & 0.03 & -0.33 & -0.22 & 2451.29 & 1\\
+
+ & bm & 0.15 & 0.03 & 0.08 & 0.21 & 2366.91 & 1\\
+
+ & bA & -0.16 & 0.03 & -0.22 & -0.09 & 2125.81 & 1\\
+
+\multirow{-12}{*}{\raggedright\arraybackslash Simple Pulse} & sigma & 0.78 & 0.01 & 0.77 & 0.80 & 4405.26 & 1\\
+\cline{1-8}
+ & a & 0.14 & 0.04 & 0.07 & 0.21 & 2081.71 & 1\\
+
+ & bmr & 0.46 & 0.04 & 0.38 & 0.54 & 2940.80 & 1\\
+
+ & bdr & -0.49 & 0.04 & -0.58 & -0.41 & 2567.23 & 1\\
+
+ & bmA & -0.40 & 0.04 & -0.48 & -0.32 & 3022.05 & 1\\
+
+ & bdA & 0.07 & 0.04 & -0.01 & 0.15 & 2762.50 & 1\\
+
+ & bd & -0.06 & 0.03 & -0.12 & 0.00 & 2915.63 & 1\\
+
+ & bG & -0.12 & 0.02 & -0.16 & -0.08 & 4086.03 & 1\\
+
+ & bR & -0.68 & 0.04 & -0.75 & -0.61 & 2261.48 & 1\\
+
+ & bD & -0.39 & 0.03 & -0.45 & -0.34 & 2534.51 & 1\\
+
+ & bm & 0.39 & 0.04 & 0.32 & 0.46 & 2681.03 & 1\\
+
+ & bA & -0.16 & 0.04 & -0.22 & -0.08 & 2492.02 & 1\\
+
+\multirow{-12}{*}{\raggedright\arraybackslash Extended Pulse tm} & sigma & 0.82 & 0.01 & 0.80 & 0.83 & 4196.78 & 1\\
+\cline{1-8}
+ & a & 2.85 & 0.03 & 2.78 & 2.92 & 1924.23 & 1\\
+
+ & bmr & 0.46 & 0.04 & 0.38 & 0.54 & 2413.75 & 1\\
+
+ & bdr & -0.49 & 0.04 & -0.57 & -0.41 & 2757.21 & 1\\
+
+ & bmA & -0.40 & 0.04 & -0.48 & -0.32 & 2705.38 & 1\\
+
+ & bdA & 0.07 & 0.04 & -0.01 & 0.15 & 2365.63 & 1\\
+
+ & bd & -0.06 & 0.03 & -0.12 & -0.01 & 2606.70 & 1\\
+
+ & bG & -2.84 & 0.02 & -2.88 & -2.80 & 3845.33 & 1\\
+
+ & bR & -0.68 & 0.04 & -0.75 & -0.61 & 2382.65 & 1\\
+
+ & bD & -0.39 & 0.03 & -0.45 & -0.33 & 2713.53 & 1\\
+
+ & bm & 0.39 & 0.04 & 0.32 & 0.47 & 2103.45 & 1\\
+
+ & bA & -0.15 & 0.04 & -0.22 & -0.08 & 2451.45 & 1\\
+
+\multirow{-12}{*}{\raggedright\arraybackslash Extended Pulse td} & sigma & 0.82 & 0.01 & 0.80 & 0.83 & 4877.42 & 1\\
 \hline
 \end{tabular}
 \end{table}
@@ -247,7 +287,7 @@ Extended Pulse (td=2500) & 0.018 (0.018 - 0.018) & 2129 (2055 - 2208) & -1e-06 (
 
 \begin{table}[H]
 
-\caption{\label{tab:tableSReadl_data_AIC_F_Test} AIC and RSS for the fit  to ALD from the 1k Genome data.}
+\caption{\label{tab:tableSReadl_data_AIC_RSS} AIC and RSS for the fit  to ALD from the 1k Genome data.}
 \centering
 \begin{tabular}[t]{l|r|r}
 \hline
